feat(agent): package provider-backed reference demo (#50)
* feat(agent): add schema-constrained Groq reasoner

* feat(agent): package executable reference demo

* fix(agent): preserve nullable MCP JSON evidence

* fix(agent): verify executable proposal and avoid duplicate repackaging

* docs(demo): wire optional Groq run into local lifecycle

* fix(demo): resolve active site and survive provider unavailability

* fix(agent): constrain mapping shape and rate-limit recovery

* chore(repo): distinguish integration IDs from tooling attribution